--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,12 @@ services:
     volumes:
       - pg-db:/var/lib/postgresql/data
       - ./postgres-init:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U administrator -d default"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 30s
 
   auth1:
     build:
