--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,10 @@ http {
         server auth2:8080 max_fails=3 fail_timeout=30s;
     }
 
+    upstream electric_backend {
+        server electric:3000 max_fails=3 fail_timeout=30s;
+    }
+
     # Define rate limiting
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
 
@@ -32,7 +36,27 @@ http {
             add_header Content-Type text/plain;
         }
 
-        # Proxy all requests to auth service
+        # Proxy Electric API requests
+        location /electric/ {
+            # Apply rate limiting
+            limit_req zone=api_limit burst=20 nodelay;
+
+            proxy_pass http://electric_backend/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Timeouts
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+
+            # Health check settings
+            proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+        }
+
+        # Proxy all other requests to auth service
         location / {
             # Apply rate limiting
             limit_req zone=api_limit burst=20 nodelay;
