bug fixing electric

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,16 @@ services:
   database:
     image: "postgres:alpine3.22"
     restart: always
+    command:
+      [
+        "postgres",
+        "-c",
+        "wal_level=logical",
+        "-c",
+        "max_replication_slots=10",
+        "-c",
+        "max_wal_senders=10",
+      ]
     ports:
       - 5432:5432
     environment:
