--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,10 @@ http {
         server electric:3000 max_fails=3 fail_timeout=30s;
     }
 
+    upstream express_backend {
+        server express-api:3001 max_fails=3 fail_timeout=30s;
+    }
+
     # Define rate limiting
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
 
@@ -34,6 +38,26 @@ http {
             access_log off;
             return 200 "nginx healthy\n";
             add_header Content-Type text/plain;
+        }
+
+        # Proxy Express API requests
+        location /api/ {
+            # Apply rate limiting
+            limit_req zone=api_limit burst=20 nodelay;
+
+            proxy_pass http://express_backend/api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Timeouts
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
+
+            # Health check settings
+            proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
         }
 
         # Proxy Electric API requests
