--- a/express/package.json
+++ b/express/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "node --watch index.js"
+    "dev": "nodemon --watch index.js"
   },
   "dependencies": {
     "@livestore/livestore": "^0.3.1",
