--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       DB_USER: postgres
       DB_PASSWORD: password
       DB_NAME: electric
+      DB_HOST: localhost
       DB_SSLMODE: "disable"
     depends_on:
       postgres:
@@ -74,6 +75,7 @@ services:
       DB_USER: postgres
       DB_PASSWORD: password
       DB_NAME: electric
+      DB_HOST: localhost
       DB_SSLMODE: "disable"
     depends_on:
       postgres:
@@ -94,6 +96,32 @@ services:
       retries: 3
       start_period: 40s
 
+  client:
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    environment:
+      - NODE_ENV=production
+    ports:
+      - "5173:5173"
+    depends_on:
+      - electric
+    restart: unless-stopped
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "wget",
+          "--no-verbose",
+          "--tries=1",
+          "--spider",
+          "http://localhost:5173",
+        ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
   nginx:
     image: nginx:alpine
     ports:
@@ -105,6 +133,8 @@ services:
       auth1:
         condition: service_healthy
       auth2:
+        condition: service_healthy
+      client:
         condition: service_healthy
     restart: unless-stopped
     healthcheck:
