--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,28 +1,24 @@
+## nginx/default.conf
 server {
-    listen 5173;
-    server_name localhost;
-    root /usr/share/nginx/html;
-    index index.html;
+  # Nginx listens on port 80 by default. You can change this if needed.
+  listen 5173;
 
-    # Enable gzip compression
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+  # Specifies your domain. Use "localhost" for local development or your domain name for production.
+  server_name localhost;
 
-    # Handle client-side routing (SPA)
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
+  # The root directory that contains the `dist` folder generated after building your app.
+  root /usr/share/nginx/html;
+  index index.html;
 
-    # Cache static assets
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
+  # Serve all routes and pages
+  # Use the base name to serve all pages. In this case, the base name is "/".
+  location / {
+    try_files $uri /index.html =404;
+  }
 
-    # Health check endpoint
-    location /health {
-        access_log off;
-        return 200 "client healthy\n";
-        add_header Content-Type text/plain;
-    }
-} 
+  # Example: If your base name is "/example", the location block will look like this:
+  # location /example {
+  #   rewrite ^/example(/.*) $1 break;
+  #   try_files $uri /index.html =404;
+  # }
+}
