--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,10 @@ services:
     ports:
       - "5432:5432"
     tmpfs:
-      - /var/lib/postgresql/data
       - /tmp
+    volumes:
+      - ./postgres-data:/var/lib/cloud-postgresql/data
+      - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
     command:
       - -c
       - listen_addresses=*
